add proxy service (version 0)